examples/test/testpolicy12483.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12483
  namespace: namespace224
spec:
  podSelector:
    matchLabels:
      key49: value21
      key45: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value0
          key10: value17
          key4: value20
      podSelector:
        matchLabels:
          key7: value0
          key35: value36
          key12: value10
